Fix donut small legend layout issues

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -2,7 +2,8 @@ body {
   margin: 0px;
   background: white;
   font-family: 'Nunito Sans', sans-serif;
-  padding-top: 70px;
+  min-width: 600px;
+  overflow: scroll;
 }
 
 .container {
