--- a/src/client/components/HeaderBar/HeaderBar.css
+++ b/src/client/components/HeaderBar/HeaderBar.css
@@ -1,7 +1,6 @@
 .matter-navbar {
   background:#8386ED;
   height: 70px;
-  position: absolute;
   width: 100%;
   top: 0px;
 
