--- a/src/client/components/OverviewSection/OverviewSection.css
+++ b/src/client/components/OverviewSection/OverviewSection.css
@@ -1,5 +1,11 @@
 .overview-section {
 
+  /* Rectangle 1: */
+  background: #FFFFFF;
+  border: 1px solid #DEDEDE;
+  box-shadow: 0 0 5px 0 rgba(0,0,0,0.04);
+  border-radius: 4px;
+
   background: white;
   padding: 15px 15px;
   margin-bottom: 25px;
